--- a/.github/workflows/build-example-cygnus.yml
+++ b/.github/workflows/build-example-cygnus.yml
@@ -10,5 +10,6 @@ jobs:
     with:
       board: '["nice_nano_v2"]'
       shield: '["charybdis_left", "charybdis_right"]'
+      custom_config: '["#define MIRYOKU_ALPHAS_QWERTY\n#define MIRYOKU_CLIPBOARD_WIN"]'
       kconfig: '["CONFIG_ZMK_SLEEP=y\nCONFIG_ZMK_IDLE_SLEEP_TIMEOUT=1800000\nCONFIG_ZMK_BLE_EXPERIMENTAL_CONN=y"]'
       modules: '["Vzhao-L/zmk-for-charybdis/Cygnus"]'
